--- a/passwordgenerator.css
+++ b/passwordgenerator.css
@@ -4,3 +4,10 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Metroid Prime';
+	box-sizing: border-box;
+}
