--- a/passwordgenerator.css
+++ b/passwordgenerator.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Metroid Prime';
-	src: url(fonts/Metroid Prime Hunters.ttf) format('truetype');
+	src: url(Fonts/MetroidPrimeHunters.ttf) format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
