--- a/passwordgenerator.css
+++ b/passwordgenerator.css
@@ -11,3 +11,14 @@
 	font-family: 'Metroid Prime';
 	box-sizing: border-box;
 }
+
+body {
+	background: #002339;
+	color: #fff;
+}
+
+.container {
+	margin: 12%;
+	width: 90%;
+	max-width: 700px;
+}
